--- a/layouts/32u4_test.yaml
+++ b/layouts/32u4_test.yaml
@@ -16,10 +16,10 @@ devices:
         r2c0, r2c1, r2c2, r2c3, r2c4, r2c5,
         r3c0, r3c1, r3c2, r3c3, r3c4, r3c5,
       ]
-    layout: 1key
+    layout: Test Layout
 
 layouts:
-  1key:
+  TEST LAYOUT:
     layers: [
       [ # layer 0 (base)
         [
