--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,14 @@
 [submodule "src/arch/avr/avr-makefile"]
 	path = src/arch/avr/avr-makefile
 	url = https://github.com/ahtn/avr-makefile
+    remote = master
 [submodule "ports/atmega32u4/bootloaders/kp_boot_32u4"]
 	path = ports/atmega32u4/bootloaders/kp_boot_32u4
 	url = https://github.com/ahtn/kp_boot_32u4
-[submodule "ports/nrf24lu1/kp_boot_32u4"]
-	path = ports/nrf24lu1/kp_boot_32u4
-	url = https://github.com/ahtn/kp_boot_32u4
+    remote = master
 [submodule "ports/xmega/xusb-boot"]
 	path = ports/xmega/xusb-boot
 	url = https://github.com/ahtn/xusb-boot
+[submodule "ports/nrf24lu1/nrf24lu1p-512-bootloader"]
+	path = ports/nrf24lu1/nrf24lu1p-512-bootloader
+	url = https://github.com/ahtn/nrf24lu1p-512-bootloader
