--- a/ports/xmega/Makefile
+++ b/ports/xmega/Makefile
@@ -170,9 +170,9 @@ else ifeq ($(MCU_FLASH_SIZE), 64)
   LAYOUT_ADDR := 0xC200
   LAYOUT_SIZE := 0x3E00
 else ifeq ($(MCU_FLASH_SIZE), 128)
-  SETTINGS_ADDR := 0xC000
-  LAYOUT_ADDR := 0xC200
-  LAYOUT_SIZE := 0x13E00
+  SETTINGS_ADDR := 0x18000
+  LAYOUT_ADDR := 0x18200
+  LAYOUT_SIZE := 0x07E00
 else ifeq ($(MCU_FLASH_SIZE), 192)
   SETTINGS_ADDR := 0xC000
   LAYOUT_ADDR := 0xC200
