--- a/ports/nrf52/Makefile
+++ b/ports/nrf52/Makefile
@@ -7,16 +7,14 @@
 
 TARGET_BASE_NAME = nrf52_keyplus
 # ARCH             = XMEGA
-# F_CPU            = 32000000
+F_CPU            = 64000000
 # F_USB            = 48000000
 # FORMAT           = ihex
 # SHELL            = /bin/bash
 
-EXTRA_TARGET      = nrf52840_xxaa
-
 KEYPLUS_PATH      = ../../src
 PROJ_PATH         = .
-PROJ_SRC_PATH     = ./src/
+PROJ_SRC_PATH     = ./src
 
 VPATH += $(KEYPLUS_PATH)
 
@@ -33,6 +31,10 @@ SDK_ROOT ?= $(HOME)/local/nRF5_SDK_15.3.0_59ac345
 USB_DESCRIPTOR_ARRANGEMENT = normal
 SCAN_METHOD = fast_row_col
 
+ifndef BOARD
+	BOARD=nrf52840_dk
+endif
+
 include $(KEYPLUS_PATH)/boards.mk
 
 #######################################################################
@@ -40,20 +42,25 @@ include $(KEYPLUS_PATH)/boards.mk
 #######################################################################
 
 include $(KEYPLUS_PATH)/core/core.mk
-include $(KEYPLUS_PATH)/usb/usb.mk
-include $(KEYPLUS_PATH)/key_handlers/key_handlers.mk
+# include $(KEYPLUS_PATH)/usb/usb.mk
+# include $(KEYPLUS_PATH)/key_handlers/key_handlers.mk
 
 #######################################################################
 #                             c settings                              #
 #######################################################################
 
-CFLAGS += $(INC_PATHS)
+# CFLAGS += $(INC_PATHS)
 CFLAGS += -Wno-error=unused-variable
 CFLAGS += -Wno-error=unused-but-set-variable
 
 # List C source files here.
 C_SRC += \
 	$(PROJ_SRC_PATH)/main.c \
+	$(PROJ_SRC_PATH)/port_impl/io_map.c \
+	$(PROJ_SRC_PATH)/port_impl/flash.c \
+	$(PROJ_SRC_PATH)/port_impl/aes.c \
+	$(PROJ_SRC_PATH)/port_impl/nonce.c \
+	# $(KEYPLUS_PATH)/core/settings.c \
 
 
 ifeq ($(USE_USB), 1)
@@ -81,6 +88,8 @@ CDEFS += $(USB_OPTS)
 CDEFS += -D'HW_VERSION=$(HW_VERSION)'
 CDEFS += -D'FW_VERSION=$(FW_VERSION)'
 
+CDEFS += -DF_CPU=$(F_CPU)UL
+
 # Place -D or -U options here for ASM sources
 ADEFS += $(USB_OPTS)
 ADEFS += -D __$(DEVICE)__
@@ -98,22 +107,29 @@ MAKEFILE_INC += Makefile
 
 
 # LD_SCRIPT_DIR = /usr/lib/ldscripts
-LD_SCRIPT_DIR = ./ld-scripts
+# LD_SCRIPT_DIR = ./ld-scripts
 
 SETTINGS_SIZE = 0x200
-ifeq ($(MCU_FLASH_SIZE), 32)
-  SETTINGS_ADDR := 0x7A00
-  LAYOUT_ADDR := 0x7C00
-  LAYOUT_SIZE := 0x0400
-else ifeq ($(MCU_FLASH_SIZE), 256)
-  SETTINGS_ADDR := 0xC000
-  LAYOUT_ADDR := 0xC200
-  LAYOUT_SIZE := 0x33E00
+
+ifeq ($(MCU), nrf52840)
+  NONCE_ADDR := 0x40000 # need 2 pages for nonce (1 backup)
+  SETTINGS_ADDR := 0x42000
+  LAYOUT_ADDR := 0x43000
+  LAYOUT_SIZE := 0x1000
+else ifeq ($(MCU), nrf52832)
+  $(message '$(MCU)' not implemented yet)
 else
   $(message Error unsupported flash size='$(FLASH_SIZE)')
 endif
 
-LDFLAGS += -T $(LD_SCRIPT_DIR)/$(LD_SCRIPT)
+
+# TODO: temp
+CDEFS += -DNONCE_ADDR=$(NONCE_ADDR)
+CDEFS += -DSETTINGS_ADDR=$(SETTINGS_ADDR)
+CDEFS += -DLAYOUT_ADDR=$(LAYOUT_ADDR)
+CDEFS += -DLAYOUT_SIZE=$(LAYOUT_SIZE)
+
+# LDFLAGS += -T $(LD_SCRIPT_DIR)/$(LD_SCRIPT)
 LDFLAGS += -Wl,--section-start=.key_settings_block=$(SETTINGS_ADDR)
 LDFLAGS += -Wl,--section-start=.key_layout_block=$(LAYOUT_ADDR)
 
@@ -125,9 +141,25 @@ include $(KEYPLUS_PATH)/keyplus.mk
 
 SRC_FILES += $(C_SRC)
 CFLAGS += $(CDEFS)
+# CFLAGS += $(INC_PATHS)
 
 INC_FOLDERS += $(KEYPLUS_PATH)
 INC_FOLDERS += $(PROJ_SRC_PATH)
-# INC_FOLDERS += $(INC_PATHS)
+INC_FOLDERS += $(TARGET_BOARD_DIR)
 
 include $(PROJ_PATH)/nrf52.mk
+
+$(TARGET_HEX): nrf52840_xxaa
+	cp $(BUILD_TARGET_DIR)/nrf52840_xxaa.hex $@
+
+.PHONY: program gdb
+
+# Flash the program
+program: $(MERGED_HEX)
+	@echo Flashing: $<
+	nrfjprog -f nrf52 --program $< --sectorerase
+	nrfjprog -f nrf52 --reset
+
+gdb:
+	arm-none-eabi-gdb -x .gdbinit
+
