add nrf52 support for external nRF24L01+ via SPI

--- a/layouts/efm8_1key.yaml
+++ b/layouts/efm8_1key.yaml
@@ -1,24 +1,21 @@
-# Written in 2019 by jem@seethis.link
+# Written in 2018 by jem@seethis.link
 # This file is released into the public domain as per the CC0 Public Domain
 # Dedication (http://creativecommons.org/publicdomain/zero/1.0/)
 ---
 
 devices:
-  "nRF52_dk 4key":
-    wireless_split: true
-    wireless_mouse: true
-    wired_split: false
+  "EFM8 test":
     scan_mode:
       mode: pin_gnd
-      pins: [P0.11, P0.12, P0.24, P0.25]
-    layout: 4key
+      pins: [P1.2]
+    layout: 1key
 
 layouts:
-  4key:
+  1key:
     layers: [
       [ # layer 0 (base)
         [
-          1, 2, 3, 4
+          1,
         ]
       ],
     ]
