--- a/layouts/basic_split_test.yaml
+++ b/layouts/basic_split_test.yaml
@@ -307,6 +307,16 @@ devices:
       #   parasitic_discharge_delay_debouncing: 10.0
 
 
+  nrf52840_dk:
+    id: 20
+    wireless_split: true
+    wireless_mouse: true
+    wired_split: false
+    scan_mode:
+      mode: pin_gnd
+      pins: [P0.11, P0.12, P0.24, P0.25]
+    layout: 4key
+
   # rf dongle
   nRF24 Dongle 📻:
     id: 48
@@ -451,6 +461,15 @@ keycodes:
 
 layouts:
   default: gamma_split
+
+  4key:
+    layers: [
+      [ # layer 0 (base)
+        [
+          1, 2, 3, 4
+        ]
+      ],
+    ]
 
   split_layout:
     default_layer: 0
